[tool.poetry]
name = "melody-match"
version = "0.1.0"
description = ""
authors = ["Jean-Marie GERONIMI <jm.geronimi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
